--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   background: #151515 url("../images/c_plus_plus_small.jpg") no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
+  height: 60vh;
 }
 
 .header::after {
